--- a/app/src/modules/groups/profile/filter-selector/filter-selector.component.scss
+++ b/app/src/modules/groups/profile/filter-selector/filter-selector.component.scss
@@ -2,6 +2,9 @@ m-groups--filter-selector {
   position: relative;
   width: 100%;
   display: block;
+  @media screen and (max-width: 840px) {
+    text-align: center;
+  }
 
   .m-groups--filter-selector {
     position: absolute;
@@ -13,6 +16,12 @@ m-groups--filter-selector {
     border-radius: 2px;
     font-size: 11px;
     line-height: 1.5;
+
+    @media screen and (max-width: 840px) {
+      position: inherit;
+      display: block;
+      margin: 0 auto;
+    }
 
     .m-groups--filter-selector-item {
       display: inline-block;
